change theme of codemirror

--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
         src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.2/mode/javascript/javascript.min.js">
       </script>
       <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.2/theme/monokai.min.css">
+        href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.2/theme/material-ocean.min.css">
       </link>
   </head>
   <body>
